--- a/hometown/template.html
+++ b/hometown/template.html
@@ -31,7 +31,7 @@
 	
 		<div  id="item1"> <img src="images/placeholder.png" alt="place"></div>
 		
-		<div id="item2"><p> Part 1.</p></div></div>
+		<div id="item2"><p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti excepturi impedit veniam deserunt ducimus repellendus perferendis molestias sit necessitatibus provident, voluptatem at ipsum omnis blanditiis beatae aliquam, dignissimos possimus, incidunt nobis cum atque optio tempora laborum soluta. Alias, fugiat! Pariatur repellat numquam debitis, minima, nobis natus quod! Numquam officia quibusdam ab in quia. Voluptatum, pariatur? Maxime neque explicabo fugit sunt ab minima aliquam dolore esse veniam, nam repudiandae ad, dignissimos eos praesentium incidunt dicta, inventore ex quasi quisquam ipsa! Nihil cupiditate, necessitatibus, tempora asperiores suscipit quaerat rerum corporis non deleniti.</p></div></div>
 	</section>
 		
 			
@@ -39,7 +39,7 @@
 		<div class="flex-conainer2"> 
 		
 	
-		<div id="item3"><p>id 3</p></div>
+		<div id="item3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias laborum quod adipisci magni, ipsam, odit ducimus quaerat doloremque ullam accusamus cum similique sunt error, atque blanditiis corrupti, laudantium hic reiciendis maiores voluptatem dolorem minus! Enim ut quaerat corrupti dolorum autem, commodi doloremque repellendus facere, distinctio eos odio voluptatibus tenetur dolores! Expedita tempora, accusantium sed ut sit veniam quos fugit esse est nam magni consequatur qui, reprehenderit nemo. Sapiente consequatur cupiditate ipsa quae esse, nobis ipsam numquam ab officia cum. Aperiam inventore consequatur delectus non assumenda cum magni nostrum, ducimus voluptatum illum nobis nesciunt, laboriosam voluptate, officia, minima labore iste quo!</p></div>
 		
 		<div id="item4"><img src="images/placeholder.png" alt="place"></div>
 		</div>
